--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "reactjs-popup": "^1.3.2"
   },
   "scripts": {
-    "start": "cross-env PORT=3001 react-scripts start",
+    "start": "PORT=3001 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
