--- a/package.json
+++ b/package.json
@@ -10,20 +10,24 @@
     "@material-ui/icons": "^3.0.2",
     "font-awesome": "^4.7.0",
     "i": "^0.3.6",
-    "npm": "^6.4.1",
+    "npm": "^6.9.0",
     "query-string": "^5.1.1",
     "react": "^16.6.3",
     "react-addons-css-transition-group": "^15.6.2",
+    "react-autocomplete": "^1.8.1",
+    "react-autosuggest": "^9.4.3",
     "react-cookie": "^3.0.8",
     "react-dom": "^16.6.3",
     "react-favicon": "0.0.14",
+    "react-keydown": "^1.9.8",
     "react-loading-screen": "0.0.17",
+    "react-onclickoutside": "^6.8.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.1",
+    "react-scripts": "^2.1.8",
     "reactjs-popup": "^1.3.2"
   },
   "scripts": {
-    "start": "PORT=3001 react-scripts start",
+    "start": "PORT=80 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
