--- a/package.json
+++ b/package.json
@@ -3,28 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.8",
-    "@fortawesome/free-solid-svg-icons": "^5.5.0",
-    "@fortawesome/react-fontawesome": "^0.1.3",
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@material-ui/core": "^3.9.4",
     "@material-ui/icons": "^3.0.2",
+    "create-react-app": "^4.0.3",
     "font-awesome": "^4.7.0",
     "i": "^0.3.6",
-    "npm": "^6.9.0",
+    "npm": "^6.14.13",
     "query-string": "^5.1.1",
-    "react": "^16.6.3",
+    "react": "^16.14.0",
     "react-addons-css-transition-group": "^15.6.2",
     "react-autocomplete": "^1.8.1",
     "react-autosuggest": "^9.4.3",
-    "react-cookie": "^3.0.8",
-    "react-dom": "^16.6.3",
+    "react-cookie": "^3.1.2",
+    "react-dom": "^16.14.0",
     "react-favicon": "0.0.14",
-    "react-keydown": "^1.9.8",
+    "react-keydown": "^1.9.12",
     "react-loading-screen": "0.0.17",
-    "react-onclickoutside": "^6.8.0",
+    "react-onclickoutside": "^6.11.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.8",
-    "reactjs-popup": "^1.3.2"
+    "react-youtube": "^7.13.1",
+    "reactjs-popup": "^1.5.0"
   },
   "scripts": {
     "start": "PORT=80 react-scripts start",
@@ -42,6 +44,6 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "cross-env": "^5.2.0"
+    "cross-env": "^5.2.1"
   }
 }
