--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/fontawesome-free": "^5.15.4",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@material-ui/core": "^4.12.1",
@@ -11,6 +12,7 @@
     "create-react-app": "^4.0.3",
     "font-awesome": "^4.7.0",
     "i": "^0.3.6",
+    "material-ui-search-bar": "^1.0.0",
     "npm": "^6.14.13",
     "query-string": "^5.1.1",
     "react": "^16.14.0",
