Updated to have fleet status

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "create-react-app": "^4.0.3",
     "font-awesome": "^4.7.0",
     "i": "^0.3.6",
+    "js-cookie": "^3.0.5",
     "material-ui-search-bar": "^1.0.0",
     "npm": "^6.14.13",
     "query-string": "^5.1.1",
@@ -20,6 +21,7 @@
     "react-autocomplete": "^1.8.1",
     "react-autosuggest": "^9.4.3",
     "react-cookie": "^3.1.2",
+    "react-countdown": "^2.3.5",
     "react-dom": "^16.14.0",
     "react-favicon": "0.0.14",
     "react-keydown": "^1.9.12",
@@ -28,7 +30,8 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.8",
     "react-youtube": "^7.13.1",
-    "reactjs-popup": "^1.5.0"
+    "reactjs-popup": "^1.5.0",
+    "victory": "^36.3.0"
   },
   "scripts": {
     "start": "PORT=80 react-scripts start",
